--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -12,14 +12,8 @@ spec:
       labels:
         app: gitops-demo
     spec:
-      securityContext:
-        runAsUser: 1001
       containers:
       - name: web
-        image: docker.io/koraichi/gitops-demo:8
+        image: koraichi/gitops-demo:VERSION
         ports:
         - containerPort: 80
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "100m"
